Bug 832025 - Clear the cached styles and type-in state props when pressing Enter inside a heading or a list item; r=ehsan

--HG--
extra : rebase_source : 210c1b2b2c27761d89b6609017b9722607a33450